--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,59 @@
+# Mouse support - set to on if you want to use the mouse
+# setw -g mode-mouse off
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+
+#set status-utf8 on
+#set utf8 on
+
 # Use Vim shortcuts
 setw -g mode-keys vi
 
 # Make `Ctrl+B R` reload the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Set the default terminal mode to 256color mode
+#set -g default-terminal screen
+set-option -ga terminal-overrides ',xterm-256color:kend=\E[F:khome=\E[H:smkx=\E=:rmkx=\E>'
+
+# Set status bar
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+set -g status-bg black
+set -g status-fg colour240
+set -g status-left '#[fg=green]#{session_name}'
+set-window-option -g window-status-current-fg white
+
+# enable activity alerts
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Center the window list
+set -g status-justify centre
+
+# Use a C-a prefix as GNU screen
+set-option -g prefix C-a
+
+# Use C-a C-a for the last active window as in GNU screen
+bind-key C-a last-window
+
+# Start Window Numbering at 0
+set -g base-index 0
+
+# Faster Command Sequences by setting escape time to zero
+set -s escape-time 0
+
+# window is only constrained in size if a smaller client is actively looking at it
+setw -g aggressive-resize on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -L 2'
+set -g @plugin 'jbnicolai/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
