--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@
 #set -g mouse-resize-pane on
 #set -g mouse-select-window on
 
+## Fix for vim clipboard fail
+set -g default-command 'reattach-to-user-namespace $SHELL --login'
+
 #set status-utf8 on
 #set utf8 on
 
