--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@
 #set -g mouse-resize-pane on
 #set -g mouse-select-window on
 
-## Fix for vim clipboard fail
-set -g default-command 'reattach-to-user-namespace $SHELL --login'
+## Fix for vim clipboard fail - only for OSX ... 
+set -g default-command 'reattach-to-user-namespace $SHELL --login || $SHELL --login'
 
 #set status-utf8 on
 #set utf8 on
