--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,10 @@ set -s escape-time 0
 # window is only constrained in size if a smaller client is actively looking at it
 setw -g aggressive-resize on
 
+# different colors for active pane!
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
