--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@
 #set -g mouse-select-window on
 
 ## Fix for vim clipboard fail - only for OSX ... 
-set -g default-command 'reattach-to-user-namespace $SHELL --login || $SHELL --login'
+set -g default-command 'reattach-to-user-namespace $SHELL --login 2> /dev/null || $SHELL --login'
 
 #set status-utf8 on
 #set utf8 on
