Updates w/ terminal title and last-cmd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@
 #set -g mouse-select-window on
 
 ## Fix for vim clipboard fail - only for OSX ... 
-set -g default-command 'reattach-to-user-namespace $SHELL --login 2> /dev/null || $SHELL --login'
+# set -g default-command 'reattach-to-user-namespace $SHELL --login 2> /dev/null || $SHELL --login'
 
 #set status-utf8 on
 #set utf8 on
@@ -16,6 +16,10 @@ setw -g mode-keys vi
 # Make `Ctrl+B R` reload the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Set title of terminal
+set-option -g set-titles on
+set-option -g set-titles-string "#h [#S]:#{pane_current_command}"
 
 # Set the default terminal mode to 256color mode
 #set -g default-terminal screen
