--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,13 @@
 setw -g mode-keys vi
 
 # Make `Ctrl+B R` reload the config file
+unbind R
+bind R source-file ~/.tmux.conf
+
+unbind e
+bind e :new
 unbind r
-bind r source-file ~/.tmux.conf
+bind r tmux rename-session $(pwd)
 
 # Set title of terminal
 set-option -g set-titles on
@@ -27,8 +32,10 @@ set-option -ga terminal-overrides ',xterm-256color:kend=\E[F:khome=\E[H:smkx=\E=
 
 # Set status bar
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-set -g status-bg black
-set -g status-fg colour240
+
+#set -g status-bg black
+#set -g status-fg colour240
+
 set -g status-left '#[fg=green]#{session_name}'
 set-window-option -g window-status-current-fg white
 
@@ -55,8 +62,8 @@ set -s escape-time 0
 setw -g aggressive-resize on
 
 # different colors for active pane!
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=black'
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=black'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -68,3 +75,5 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
